[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ul_make_sheets"
version = "0.0.0"
authors = [
  {name="Sean Kilcullen", email="seankilcullen@hotmail.co.uk"},
]
description = "Minimal Dungeons and Dragons 2024 5e Character Sheet Creation Tool based on dungeonsheets make-sheets"
readme = "README.rst"
license = {"file"= "LICENSE"}
requires-python = ">=3.9"
keywords = ["D&D", "character", "sheets"]
dependencies = ["jinja2", "sphinx", "reportlab", "docutils", "pypdf>=5.2.0"]

[project.scripts]
"makesheets" = "ul_make_sheets.make_sheets:main"

[tool.setuptools.package-data]
ul_make_sheets = [
  "forms/*pdf",
  "forms/*.tex",
  "forms/*.txt",
]

[tool.setuptools_scm]
